--- a/grafo-app/package.json
+++ b/grafo-app/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "dagre": "^0.8.5",
+    "element-plus": "^2.9.4",
+    "v-network-graph": "^0.9.18",
     "vue": "^3.5.13"
   },
   "devDependencies": {
